增加接口文档, 清空发送队列接口
1.增加接口文档
2.增加清空发送队列接口
3.修改可执行文件

--- a/admirersender.config
+++ b/admirersender.config
@@ -1,16 +1,16 @@
 # 外部服务配置
 [BASE]
-PORT=9878
+PORT=9876
 # 最大连接数
 MAXCLIENT=100000
 # 处理线程数目, 一般为cpu内核数目
 MAXHANDLETHREAD=2
 # 单核每秒处理请求数目
-MAXQUERYPERCOPY=20
+MAXQUERYPERCOPY=100
 # 单个请求超时时间(秒)
 TIMEOUT=5
 # 统计信息输出时间间隔(秒)
-STATETIME=30
+STATETIME=60
 
 # 日志配置
 [LOG]
@@ -19,7 +19,7 @@ LOGLEVEL=5
 # 日志路径
 LOGDIR=./log
 # 调试模式(0:关闭, 1:开启)
-DEBUGMODE=1
+DEBUGMODE=0
 
 # mysql数据库配置
 # 男士库
@@ -56,8 +56,8 @@ DBNAME=mysqldb_chnlove
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=0
-# 同一天同一机构只能发给同一个男士N封意向信
-OVERVALUE=10
+# 允许发送的女士分值, 大于才能发送
+OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=cl
 
@@ -77,8 +77,8 @@ DBNAME=mysqldb_thaimatches
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=1
-# 同一天同一机构只能发给同一个男士N封意向信
-OVERVALUE=10
+# 允许发送的女士分值, 大于才能发送
+OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=th
 
@@ -98,8 +98,8 @@ DBNAME=rudatematch_website
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=4
-# 同一天同一机构只能发给同一个男士N封意向信
-OVERVALUE=10
+# 允许发送的女士分值, 大于才能发送
+OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=ru
 
@@ -119,7 +119,7 @@ DBNAME=latamdate_website
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=5
-# 同一天同一机构只能发给同一个男士N封意向信
-OVERVALUE=10
+# 允许发送的女士分值, 大于才能发送
+OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=ld
