--- a/admirersender.config
+++ b/admirersender.config
@@ -22,6 +22,21 @@ LOGDIR=./log
 DEBUGMODE=0
 
 # mysql数据库配置
+# Email库
+[DB_EMAIL]
+# ip
+DBHOST=192.168.8.177
+# 端口
+DBPORT=3306
+# 用户名
+DBUSER=dbu_email
+# 密码
+DBPASS=&3u*98043u(ier
+# 数据库名字
+DBNAME=mysqldb_email
+# 连接池数目
+MAXDATABASETHREAD=1
+
 # 男士库
 [DB]
 # ip
