--- a/release/admirersender.config
+++ b/release/admirersender.config
@@ -15,9 +15,9 @@ STATETIME=60
 # 日志配置
 [LOG]
 # 日志级别(0-5, 0:关闭, 5:全开)
-LOGLEVEL=4
+LOGLEVEL=3
 # 日志路径
-LOGDIR=/var/log/admirersender
+LOGDIR=/app/Admirersender/log
 # 调试模式(0:关闭, 1:开启)
 DEBUGMODE=0
 
@@ -25,11 +25,11 @@ DEBUGMODE=0
 # 男士库
 [DB]
 # ip
-DBHOST=192.168.8.177
+DBHOST=mysqldbserverhost-qdmb
 # 端口
 DBPORT=3306
 # 用户名
-DBUSER=dbu_memberdb
+DBUSER=dbu_app_memberdb
 # 密码
 DBPASS=w!3k9i3s
 # 数据库名字
@@ -45,11 +45,11 @@ DB_COUNT=4
 # CL
 [DB_0]
 # ip
-DBHOST=192.168.8.177
+DBHOST=mysqldbserverhost-cl
 # 端口
 DBPORT=3306
 # 用户名
-DBUSER=dbu_chnlove
+DBUSER=dbu_appchnlove
 # 密码
 DBPASS=2nih@wf$6i
 # 数据库名字
@@ -66,11 +66,11 @@ DBPOSTFIX=cl
 # IDA
 [DB_1]
 # 女士库ip
-DBHOST=192.168.8.177
+DBHOST=mysqldbserverhost-th
 # 女士库端口
 DBPORT=3306
 # 女士库用户名
-DBUSER=dbu_thaimatches
+DBUSER=dbu_appidateasia
 # 女士库密码
 DBPASS=aKe63mDH4
 # 女士库数据名字
@@ -87,11 +87,11 @@ DBPOSTFIX=th
 # CD
 [DB_2]
 # 女士库ip
-DBHOST=192.168.8.177
+DBHOST=mysqldbserverhost-cd
 # 女士库端口
 DBPORT=3306
 # 女士库用户名
-DBUSER=ru_dbu_asiamatch
+DBUSER=dbu_appcharmdate
 # 女士库密码
 DBPASS=02jrdfah0sdf87
 # 女士库数据名字
@@ -108,11 +108,11 @@ DBPOSTFIX=ru
 #LD
 [DB_3]
 # 女士库ip
-DBHOST=192.168.8.177
+DBHOST=mysqldbserverhost-ld
 # 女士库端口
 DBPORT=3306
 # 女士库用户名
-DBUSER=ld_dbu_latamdate
+DBUSER=dbu_applatamdate
 # 女士库密码
 DBPASS=sg94Y&k3f8)e5P
 # 女士库数据名字
@@ -125,3 +125,18 @@ SITEID=5
 OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=ld
+
+# Email库
+[DB_EMAIL]
+# ip
+DBHOST=mysqldbserverhost-mail
+# 端口
+DBPORT=3306
+# 用户名
+DBUSER=dbu_app_email
+# 密码
+DBPASS=&3u*98043u(ier
+# 数据库名字
+DBNAME=mysqldb_email
+# 连接池数目
+MAXDATABASETHREAD=1
