--- a/admirersender.config
+++ b/admirersender.config
@@ -10,33 +10,18 @@ MAXQUERYPERCOPY=100
 # 单个请求超时时间(秒)
 TIMEOUT=5
 # 统计信息输出时间间隔(秒)
-STATETIME=300
+STATETIME=60
 
 # 日志配置
 [LOG]
 # 日志级别(0-5, 0:关闭, 5:全开)
-LOGLEVEL=4
+LOGLEVEL=5
 # 日志路径
-LOGDIR=./log
+LOGDIR=log
 # 调试模式(0:关闭, 1:开启)
-DEBUGMODE=0
+DEBUGMODE=1
 
 # mysql数据库配置
-# Email库
-[DB_EMAIL]
-# ip
-DBHOST=192.168.8.177
-# 端口
-DBPORT=3306
-# 用户名
-DBUSER=dbu_email
-# 密码
-DBPASS=&3u*98043u(ier
-# 数据库名字
-DBNAME=mysqldb_email
-# 连接池数目
-MAXDATABASETHREAD=1
-
 # 男士库
 [DB]
 # ip
@@ -55,6 +40,21 @@ MAXDATABASETHREAD=1
 SYNCTIME=30
 # 女士库数目(最多4个)
 DB_COUNT=4
+
+# Email库
+[DB_EMAIL]
+# ip
+DBHOST=192.168.8.177
+# 端口
+DBPORT=3306
+# 用户名
+DBUSER=dbu_email
+# 密码
+DBPASS=&3u*98043u(ier
+# 数据库名字
+DBNAME=mysqldb_email
+# 连接池数目
+MAXDATABASETHREAD=1
 
 # 女士库格式[DB_<Number>]
 # CL
@@ -77,6 +77,8 @@ SITEID=0
 OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=cl
+# 会员库男士表会员资格分站字段
+MEMBER=chnlove
 
 # IDA
 [DB_1]
@@ -98,6 +100,8 @@ SITEID=1
 OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=th
+# 会员库男士表会员资格分站字段
+MEMBER=thaimatches
 
 # CD
 [DB_2]
@@ -119,6 +123,8 @@ SITEID=4
 OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=ru
+# 会员库男士表会员资格分站字段
+MEMBER=charmingdate
 
 #LD
 [DB_3]
@@ -140,3 +146,5 @@ SITEID=5
 OVERVALUE=0
 # 会员库对应表名后缀
 DBPOSTFIX=ld
+# 会员库男士表会员资格分站字段
+MEMBER=latadate
