--- a/admirersender.config
+++ b/admirersender.config
@@ -15,9 +15,9 @@ STATETIME=60
 # 日志配置
 [LOG]
 # 日志级别(0-5, 0:关闭, 5:全开)
-LOGLEVEL=3
+LOGLEVEL=5
 # 日志路径
-LOGDIR=log
+LOGDIR=/app/AdmirerSender/log/
 # 调试模式(0:关闭, 1:开启)
 DEBUGMODE=1
 
@@ -38,8 +38,6 @@ DBNAME=mysqldb_memberdb
 MAXDATABASETHREAD=1
 # 男士表同步时间(分钟)
 SYNCTIME=30
-# 女士库数目(最多4个)
-DB_COUNT=4
 
 # Email库
 [DB_EMAIL]
@@ -73,12 +71,20 @@ DBNAME=mysqldb_chnlove
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=0
+# 发送给同一男士的时间间隔（月）
+SENDSTEP=1
 # 允许发送的女士分值, 大于等于才能发送
 OVERVALUE=0
-# 会员库对应表名后缀
-DBPOSTFIX=cl
 # 会员库男士表会员资格分站字段
 MEMBER=chnlove
+# 默认付费会员接收最大值
+DEFAULT_PAID_MEM_RECV=6
+# # 默认非付费会员接收最大值
+DEFAULT_FREE_MEM_RECV=6
+# # 默认会员库对应表名后缀
+DEFAULT_DBPOSTFIX=cl
+# # 本配置是否可用(0:不可用, 1:可用)
+AVAILABLE=1
 
 # IDA
 [DB_1]
@@ -96,12 +102,21 @@ DBNAME=mysqldb_thaimatches
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=1
+# 发送给同一男士的时间间隔（月）
+SENDSTEP=3
 # 允许发送的女士分值, 大于等于才能发送
 OVERVALUE=0
-# 会员库对应表名后缀
-DBPOSTFIX=th
 # 会员库男士表会员资格分站字段
 MEMBER=thaimatches
+# 默认付费会员接收最大值
+DEFAULT_PAID_MEM_RECV=10
+# 默认非付费会员接收最大值
+DEFAULT_FREE_MEM_RECV=40
+# 默认会员库对应表名后缀
+DEFAULT_DBPOSTFIX=th
+# 本配置是否可用(0:不可用, 1:可用)
+AVAILABLE=1
+#
 
 # CD
 [DB_2]
@@ -119,12 +134,20 @@ DBNAME=rudatematch_website
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=4
+# 发送给同一男士的时间间隔（月）
+SENDSTEP=1
 # 允许发送的女士分值, 大于等于才能发送
 OVERVALUE=0
-# 会员库对应表名后缀
-DBPOSTFIX=ru
 # 会员库男士表会员资格分站字段
 MEMBER=charmingdate
+# 默认付费会员接收最大值
+DEFAULT_PAID_MEM_RECV=10
+# 默认非付费会员接收最大值
+DEFAULT_FREE_MEM_RECV=40
+# 默认会员库对应表名后缀
+DEFAULT_DBPOSTFIX=ru
+# 本配置是否可用(0:不可用, 1:可用)
+AVAILABLE=1
 
 #LD
 [DB_3]
@@ -142,9 +165,68 @@ DBNAME=latamdate_website
 MAXDATABASETHREAD=1
 # 站点Id
 SITEID=5
+# 发送给同一男士的时间间隔（月）
+SENDSTEP=3
 # 允许发送的女士分值, 大于等于才能发送
 OVERVALUE=0
-# 会员库对应表名后缀
-DBPOSTFIX=ld
 # 会员库男士表会员资格分站字段
 MEMBER=latadate
+# 默认付费会员接收最大值
+DEFAULT_PAID_MEM_RECV=10
+# 默认非付费会员接收最大值
+DEFAULT_FREE_MEM_RECV=40
+# 默认会员库对应表名后缀
+DEFAULT_DBPOSTFIX=ld
+# 本配置是否可用(0:不可用, 1:可用)
+AVAILABLE=1
+
+#AM
+[DB_4]
+# ip
+DBHOST=192.168.8.177
+# 端口
+DBPORT=3306
+# 用户名
+DBUSER=dbu_chnlove
+# 密码
+DBPASS=2nih@wf$6i
+# 数据库名字
+DBNAME=mysqldb_chnlove
+# 连接池数目
+MAXDATABASETHREAD=1
+# 站点Id
+SITEID=6
+# 发送给同一男士的时间间隔（月）
+SENDSTEP=1
+# 允许发送的女士分值, 大于等于才能发送
+OVERVALUE=0
+# 会员库男士表会员资格分站字段
+MEMBER=asiame
+# -----------------------
+# 默认付费会员接收最大值
+DEFAULT_PAID_MEM_RECV=6
+# 默认非付费会员接收最大值
+DEFAULT_FREE_MEM_RECV=20
+# 默认会员库对应表名(如：info_site_等)后缀
+DEFAULT_DBPOSTFIX=ame
+# -------
+# 条件0的判断(参数仅为国家)(正则表达式)
+C0_REGEX=^(china)$
+# 条件0付费会员接收最大值
+C0_PAID_MEM_RECV=6
+# 条伯0非付费会员接收最大值
+C0_FREE_MEM_RECV=20
+# 条件0会员库 stats_admire_ 表名后缀
+C0_DBPOSTFIX=ame
+# -------
+# 条件1的判断(参数仅为国家)(正则表达式)
+C1_REGEX=^(.*)$
+# 条件1付费会员接收最大值
+C1_PAID_MEM_RECV=10
+# 条伯1非付费会员接收最大值
+C1_FREE_MEM_RECV=20
+# 条件1会员库 stats_admire_ 表名后缀
+C1_DBPOSTFIX=th
+# -----------------------
+# 本配置是否可用(0:不可用, 1:可用)
+AVAILABLE=1
